# MonopolyforLinux

./: .gitignore  CMakeLists.txt  Ereignisfeld.hpp  Grundstueke.hpp  Monopoly.cpp  README.md  Spieldaten.txt  Spieler.hpp  Wuerfel.hpp  gesammelte_Header.hpp  main.cpp
Dice/: dice.cpp  dice.hpp
Felder/: Ereignisfeld.cpp  Ereignisfeld.hpp  Grundstueke.hpp
Fields/: event_field.cpp  event_field.hpp  plots.cpp  plots.hpp
Own_Random_Libary/: own_random_libary.cpp  own_random_libary.hpp
Player/: player.cpp  player.hpp
fields/: event_field.cpp  event_field.hpp  plots.cpp  plots.hpp
player/: player.cpp  player.hpp
